Fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ h1{
 }
 
 h2{
+    margin: 20px 0px 20px 0px;
     font-size: clamp(2rem, calc(1.7rem + 1.5vw), 3.5rem)
 }
 
@@ -172,6 +173,10 @@ p{
     max-width: 800px;
 }
 
+.skills{
+    padding: 40px 0px 40px 0px;
+}
+
 .skill-list{
     display: flex;
     justify-content: center;
@@ -187,9 +192,8 @@ p{
 
 .skill-list th, 
 .skill-list td{
-    padding: 10px 20px 10px 20px;
+    padding: 10px 3vw 10px 3vw;
 }
-
 
 .project{
     display: flex;
